--- a/package.json
+++ b/package.json
@@ -14,13 +14,12 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
-    "autoprefixer": "10.4.13",
+    "autoprefixer": "^10.4.2",
     "classnames": "^2.3.1",
     "next": "^12.1.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "ts-pattern": "^4.0.3",
-    "vercel": "^19.1.2"
+    "ts-pattern": "^4.0.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.1.0",
@@ -28,6 +27,7 @@
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^17.0.21",
     "@types/react": "^17.0.39",
+    "@types/tailwindcss": "^3.0.9",
     "@types/webpack-env": "^1.16.3",
     "@typescript-eslint/eslint-plugin": "^5.14.0",
     "@typescript-eslint/parser": "^5.14.0",
@@ -59,6 +59,6 @@
     "typescript": "4.5.5"
   },
   "resolutions": {
-    "autoprefixer": "10.4.13"
+    "autoprefixer": "10.4.5"
   }
 }
